--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik+Scribble&display=swap"
       rel="stylesheet"
     />
+    <meta property="og:image" content="images/share2.png">
     <title>Moja pierwsza strona internetowa</title>
   </head>
 
