website icon added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       rel="stylesheet"
     />
     <meta property="og:image" content="images/share2.png">
+    <link rel="icon" href="images/share-300.png">
     <title>Moja pierwsza strona internetowa</title>
   </head>
 
